--- a/404.html
+++ b/404.html
@@ -9,7 +9,27 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	    crossorigin="anonymous">
 	<!-- Internal CSS -->
-	<link href="./CSS/custom.css" rel="stylesheet">
+	<style>
+		html {
+			margin-left: calc(100vw - 100%);
+		}
+
+		body {
+			font-size: 18px;
+			padding-top: 70px;
+			overflow: scroll;
+		}
+
+		nav.navbar {
+			background-color: #e2fdf0;
+		}
+
+		@media screen and (max-width: 768px) {
+			body {
+				padding-top: 70px;
+			}
+		}
+	</style>
 	<link rel="icon" type="image/png" href="Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>404 - Page Not Found</title>
 	<meta name="DESCRIPTION" content="This is the homepage of Brian Pho." />
@@ -19,7 +39,7 @@
 <body>
 	<header>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="https://brianpho.com/HTML/index.html">
 				<img src="Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt=""> Brian Pho
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -29,27 +49,27 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="HTML/index.html">Home
+						<a class="nav-link" href="https://brianpho.com/HTML/index.html">Home
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./HTML/courses.html">Courses</a>
+						<a class="nav-link" href="https://brianpho.com/HTML/courses.html">Courses</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./HTML/projects.html">Projects</a>
+						<a class="nav-link" href="https://brianpho.com/HTML/projects.html">Projects</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./HTML/gallery.html">Gallery</a>
+						<a class="nav-link" href="https://brianpho.com/HTML/gallery.html">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/CR4-DL">CR4-DL</a>
+						<a class="nav-link" href="https://brianpho.com/CR4-DL/">CR4-DL</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./HTML/about.html">About</a>
+						<a class="nav-link" href="https://brianpho.com/HTML/about.html">About</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./HTML/contact.html">Contact</a>
+						<a class="nav-link" href="https://brianpho.com/HTML/contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -58,9 +78,11 @@
 	<div class="container-fluid" style="display: flex; height: 90vh; align-items: center;">
 		<div class="container text-center">
 			<h1 class="display-4">Oh Noes!</h1>
-			<h1 class="display-4">Error 404: Page Not Found</h2>
-				<p class="lead">
-					The page you tried to view does not exist.</p>
+			<h2 class="display-4">Error 404: Page Not Found</h2>
+			<h3 class="display-5">The page you tried to view does not exist.</h3>
+			<h3 class="display-5">
+				<a href="https://brianpho.com">Click here to return back to the main site.</a>
+			</h3>
 		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
