--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -150,10 +150,10 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img class="d-block w-100" src="../Images/BugTracking/bugtracking1.png" alt="First slide">
+						<img class="d-block" src="../Images/BugTracking/bugtracking1.png" alt="First slide">
 					</div>
 					<div class="carousel-item">
-						<img class="d-block w-100" src="../Images/BugTracking/bugtracking2.png" alt="Second slide">
+						<img class="d-block" src="../Images/BugTracking/bugtracking2.png" alt="Second slide">
 					</div>
 					<div class="carousel-item">
 						<img class="d-block w-100" src="../Images/BugTracking/bugtracking3.png" alt="Third slide">
@@ -229,7 +229,7 @@
 		</div>
 	</div>
 	<hr>
-	<div class="container pl-5 pr-5 pb-4" style="background-color: #fdf9e2;">
+	<div class="container pl-5 pr-5 pb-4" style="background-color: #e3f2fd;">
 		<h2 class="text-center pt-4">CPSC 471: Library Database Management System (June 2017)</h2>
 		<p>
 			<a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a>
@@ -255,37 +255,25 @@
 				<li data-target="#carouselLibrary" data-slide-to="3"></li>
 				<li data-target="#carouselLibrary" data-slide-to="4"></li>
 				<li data-target="#carouselLibrary" data-slide-to="5"></li>
-				<li data-target="#carouselLibrary" data-slide-to="6"></li>
-				<li data-target="#carouselLibrary" data-slide-to="7"></li>
-				<li data-target="#carouselLibrary" data-slide-to="8"></li>
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="../Images/Library/library1.png" alt="First slide">
+					<img class="d-block" src="../Images/Library/library1.png" alt="First slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library2.png" alt="Second slide">
+					<img class="d-block" src="../Images/Library/library2.png" alt="Second slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library3.png" alt="Third slide">
+					<img class="d-block" src="../Images/Library/library3.png" alt="Third slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library4.png" alt="Fourth slide">
+					<img class="d-block" src="../Images/Library/library4.png" alt="Fourth slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library5.png" alt="Fifth slide">
+					<img class="d-block" src="../Images/Library/library5.png" alt="Fifth slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library6.png" alt="Sixth slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library7.png" alt="Seventh slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library8.png" alt="Eighth slide">
-				</div>
-				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Library/library9.png" alt="Ninth slide">
+					<img class="d-block" src="../Images/Library/library6.png" alt="Sixth slide">
 				</div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselLibrary" role="button" data-slide="prev">
@@ -299,7 +287,7 @@
 		</div>
 	</div>
 	<hr>
-	<div class="container pl-5 pr-5 pb-4" style="background-color: #e2fde8;">
+	<div class="container pl-5 pr-5 pb-4" style="background-color: #e4e2fd;">
 		<h2 class="text-center pt-4">ENSF 409: Airlines Registration (April 2017)</h2>
 		<p>
 			<a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source Code</a>
@@ -314,7 +302,7 @@
 			users to book a flight and view the current flights to and from there destination. Only admins are able to add and view
 			all tickets.
 		</p>
-<div id="carouselAirlines" class="carousel slide" data-ride="carousel">
+		<div id="carouselAirlines" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li data-target="#carouselAirlines" data-slide-to="0" class="active"></li>
 				<li data-target="#carouselAirlines" data-slide-to="1"></li>
@@ -322,13 +310,13 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="../Images/Airlines/airlines1.png" alt="First slide">
+					<img class="d-block" src="../Images/Airlines/airlines1.png" alt="First slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Airlines/airlines2.png" alt="Second slide">
+					<img class="d-block" src="../Images/Airlines/airlines2.png" alt="Second slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="../Images/Airlines/airlines3.png" alt="Third slide">
+					<img class="d-block" src="../Images/Airlines/airlines3.png" alt="Third slide">
 				</div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselAirlines" role="button" data-slide="prev">
@@ -365,7 +353,6 @@
 			</figure>
 		</div>
 		<hr>
- -->
 	<div class="container pl-5 pr-5 pb-4" style="background-color: #e4e2fd;">
 		<h2 class="text-center pt-4">ENGG 233: Ring Runner Game (December 2015)</h2>
 		<p>
@@ -404,6 +391,7 @@
 			</a>
 		</div>
 	</div>
+ 	-->
 	<hr>
 	<footer>
 		<p class="text-center">
