--- a/HTML/index.html
+++ b/HTML/index.html
@@ -65,7 +65,7 @@
 	<footer>
 		<p class="small text-center">
 			This website is built using
-			<a href="https://getbootstrap.com/">Bootstrap 4</a> and is currently hosted using
+			<a href="https://getbootstrap.com/">Bootstrap 4</a> and is hosted using
 			<a href="https://pages.github.com/">Github Pages.</a> Last Updated July 12, 2018.
 		</p>
 	</footer>
